tests/fixtures/LatestTests/DynamicVariableTests/errors/logical_or.fg
/; EXPECT_ERROR: Unknown integer operator. logical_or
var x = 5
var y = x || 0